--- a/delivery/kustomize/base/service-hat.yaml
+++ b/delivery/kustomize/base/service-hat.yaml
@@ -2,10 +2,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: podtato-hats
+  name: podtato-hat
   labels:
     app.kubernetes.io/name: podtato-head
-    app.kubernetes.io/component: hats
+    app.kubernetes.io/component: hat
     app.kubernetes.io/version: '0.1.0'
     app.kubernetes.io/managed-by: kustomize
 spec:
@@ -17,4 +17,4 @@ spec:
       name: http
   selector:
     app.kubernetes.io/name: podtato-head
-    app.kubernetes.io/component: hats
+    app.kubernetes.io/component: hat
