--- a/delivery/kustomize/base/deployment-entry.yaml
+++ b/delivery/kustomize/base/deployment-entry.yaml
@@ -2,10 +2,10 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: podtato-hats
+  name: podtato-entry
   labels:
     app.kubernetes.io/name: podtato-head
-    app.kubernetes.io/component: hats
+    app.kubernetes.io/component: entry
     app.kubernetes.io/version: '0.1.0'
     app.kubernetes.io/managed-by: kustomize
 spec:
@@ -13,29 +13,29 @@ spec:
   selector:
     matchLabels:
       app.kubernetes.io/name: podtato-head
-      app.kubernetes.io/component: hats
+      app.kubernetes.io/component: entry
   template:
     metadata:
       labels:
         app.kubernetes.io/name: podtato-head
-        app.kubernetes.io/component: hats
+        app.kubernetes.io/component: entry
     spec:
       terminationGracePeriodSeconds: 5
       serviceAccountName: podtato-head
       containers:
-        - name: podtato-head-hats
-          image: ghcr.io/podtato-head/podtato-hats:v1-latest-dev
+        - name: podtato-head-entry
+          image: ghcr.io/podtato-head/entry:0.1.0
           imagePullPolicy: IfNotPresent
           ports:
             - name: http
               containerPort: 9000
               protocol: TCP
-          # livenessProbe:
-          #   httpGet:
-          #     path: /
-          #     port: http
-          # readinessProbe:
-          #   httpGet:
-          #     path: /
-          #     port: http
+          livenessProbe:
+            httpGet:
+              path: /
+              port: http
+          readinessProbe:
+            httpGet:
+              path: /
+              port: http
           resources: {}
