--- a/delivery/kustomize/base/deployment-left-leg.yaml
+++ b/delivery/kustomize/base/deployment-left-leg.yaml
@@ -24,7 +24,7 @@ spec:
       serviceAccountName: podtato-head
       containers:
         - name: podtato-head-left-leg
-          image: ghcr.io/podtato-head/podtato-left-leg:v1-latest-dev
+          image: ghcr.io/podtato-head/left-leg:0.1.0
           imagePullPolicy: IfNotPresent
           ports:
             - name: http
