--- a/delivery/kustomize/base/service-entry.yaml
+++ b/delivery/kustomize/base/service-entry.yaml
@@ -2,10 +2,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: podtato-main
+  name: podtato-entry
   labels:
     app.kubernetes.io/name: podtato-head
-    app.kubernetes.io/component: main
+    app.kubernetes.io/component: entry
     app.kubernetes.io/version: '0.1.0'
     app.kubernetes.io/managed-by: kustomize
 spec:
@@ -17,4 +17,4 @@ spec:
       name: http
   selector:
     app.kubernetes.io/name: podtato-head
-    app.kubernetes.io/component: main
+    app.kubernetes.io/component: entry
