--- a/delivery/chart/Chart.yaml
+++ b/delivery/chart/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
 name: podtato-head
 description: Deploys the podtato-head app
-version: 0.1.0
-appVersion: v0.1.0
+version: 0.2.1
+appVersion: 0.2.1
