--- a/delivery/chart/templates/service-left-leg.yaml
+++ b/delivery/chart/templates/service-left-leg.yaml
@@ -5,7 +5,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ printf "%s-%s" "podtato" $componentName }}
+  name: {{ printf "%s-%s" (include "podtato-head.fullname" .) $componentName }}
   labels:
     {{- include "podtato-head.labels" . | nindent 4 }}
     app.kubernetes.io/component: {{ printf "%s-%s" (include "podtato-head.fullname" .) $componentName }}
