--- a/delivery/kustomize/base/service-hat.yaml
+++ b/delivery/kustomize/base/service-hat.yaml
@@ -2,11 +2,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: podtato-hat
+  name: podtato-head-hat
   labels:
     app.kubernetes.io/name: podtato-head
     app.kubernetes.io/component: hat
-    app.kubernetes.io/version: '0.1.0'
+    app.kubernetes.io/version: '0.2.1'
     app.kubernetes.io/managed-by: kustomize
 spec:
   type: ClusterIP
