--- a/delivery/kustomize/base/service-right-arm.yaml
+++ b/delivery/kustomize/base/service-right-arm.yaml
@@ -2,11 +2,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: podtato-right-arm
+  name: podtato-head-right-arm
   labels:
     app.kubernetes.io/name: podtato-head
     app.kubernetes.io/component: right-arm
-    app.kubernetes.io/version: '0.1.0'
+    app.kubernetes.io/version: '0.2.1'
     app.kubernetes.io/managed-by: kustomize
 spec:
   type: ClusterIP
