adding ability to set deployment extra env variables for things like specifying the part number
Signed-off-by: michael <mxnxpx@gmail.com>

--- a/delivery/chart/templates/deployment-entry.yaml
+++ b/delivery/chart/templates/deployment-entry.yaml
@@ -1,6 +1,7 @@
 {{ $componentName := "entry" }}
 {{ $repoBasename := .Values.entry.repositoryBasename }}
 {{ $repoTag := .Values.entry.tag }}
+{{ $extraEnvs := .Values.entry.extraEnvs }}
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -65,3 +66,11 @@ spec:
               port: http
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
+          env:     
+            - name: POD_NAME
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.name
+          {{- if $extraEnvs }}
+            {{- toYaml $extraEnvs | nindent 12 }}
+          {{- end }}
