--- a/delivery/chart/templates/deployment-right-leg.yaml
+++ b/delivery/chart/templates/deployment-right-leg.yaml
@@ -1,6 +1,7 @@
 {{ $componentName := "right-leg" }}
 {{ $repoBasename := .Values.rightLeg.repositoryBasename }}
 {{ $repoTag := .Values.rightLeg.tag }}
+{{ $extraEnvs := .Values.rightLeg.extraEnvs }}
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -65,3 +66,11 @@ spec:
           #     port: http
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
+          env:
+            - name: POD_NAME
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.name
+          {{- if $extraEnvs }}
+            {{- toYaml $extraEnvs | nindent 12 }}
+          {{- end }}
