--- a/delivery/chart/values.yaml
+++ b/delivery/chart/values.yaml
@@ -14,31 +14,49 @@ entry:
   tag: "0.1.0"
   serviceType: LoadBalancer
   servicePort: 9000
+  extraEnvs: []
+  #   - name: PODTATO_PART_NUMBER
+  #     value: "01"
 hat:
   repositoryBasename: hat
   tag: "0.1.0"
   serviceType: ClusterIP
   servicePort: 9001
+  extraEnvs: []
+  #   - name: PODTATO_PART_NUMBER
+  #     value: "01"
 leftLeg:
   repositoryBasename: left-leg
   tag: "0.1.0"
   serviceType: ClusterIP
   servicePort: 9002
+  extraEnvs: []
+  #   - name: PODTATO_PART_NUMBER
+  #     value: "01"
 leftArm:
   repositoryBasename: left-arm
   tag: "0.1.0"
   serviceType: ClusterIP
   servicePort: 9003
+  extraEnvs: []
+  #   - name: PODTATO_PART_NUMBER
+  #     value: "01"
 rightLeg:
   repositoryBasename: right-leg
   tag: "0.1.0"
   serviceType: ClusterIP
   servicePort: 9004
+  extraEnvs: []
+  #   - name: PODTATO_PART_NUMBER
+  #     value: "01"
 rightArm:
   repositoryBasename: right-arm
   tag: "0.1.0"
   serviceType: ClusterIP
   servicePort: 9005
+  extraEnvs: []
+  #   - name: PODTATO_PART_NUMBER
+  #     value: "01"
 
 serviceAccount:
   # Specifies whether a service account should be created
