add GH workflow for monolith

--- a/.github/workflows/microservices-release.yaml
+++ b/.github/workflows/microservices-release.yaml
@@ -1,12 +1,10 @@
-name: podtato-head-release
+name: podtato-head-microservices-release
 
 on:
   push:
     branches:
       - 'main'
-      - 'develop'
       - 'release-*'
-
 
 env:
   RELEASE_BUILD: 1
