--- a/.github/workflows/delivery-tests.yaml
+++ b/.github/workflows/delivery-tests.yaml
@@ -35,6 +35,8 @@ jobs:
     steps:
       - name: Checkout repo
         uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
       - name: Create kind cluster
         uses: helm/kind-action@v1.2.0
       - name: Test delivery with kubectl
@@ -47,6 +49,8 @@ jobs:
     steps:
       - name: Checkout repo
         uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
       - name: Create kind cluster
         uses: helm/kind-action@v1.2.0
       - name: Test delivery with helm
@@ -59,6 +63,8 @@ jobs:
     steps:
       - name: Checkout repo
         uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
       - name: Create kind cluster
         uses: helm/kind-action@v1.2.0
       - name: Test delivery with helm
@@ -71,6 +77,8 @@ jobs:
     steps:
       - name: Checkout repo
         uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v1
         with:
@@ -89,13 +97,23 @@ jobs:
     steps:
       - name: Checkout repo
         uses: actions/checkout@v2
-      - name: Login to GitHub Container Registry
-        uses: docker/login-action@v1
         with:
-          registry: ${{ env.CONTAINER_REGISTRY }}
-          username: ${{ github.repository_owner }}
-          password: ${{ github.token }}
+          fetch-depth: 0
       - name: Create kind cluster
         uses: helm/kind-action@v1.2.0
       - name: Test delivery with flux
         run: ./delivery/flux/test.sh "${{ github.repository_owner }}" "${{ github.token }}"
+
+  test_operator_delivery:
+    name: Deliver with operator
+    needs: [build_and_push_images]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+      - name: Create kind cluster
+        uses: helm/kind-action@v1.2.0
+      - name: Test delivery with operator
+        run: ./delivery/operator/test/test.sh "${{ github.repository_owner }}" "${{ github.token }}"
