--- a/delivery/chart/values.yaml
+++ b/delivery/chart/values.yaml
@@ -7,11 +7,12 @@ images:
   repositoryDirname: ghcr.io/podtato-head
   pullPolicy: IfNotPresent
   pullSecrets: []
+    # - name: ghcr
 
 # keep ports in sync with podtato-services/main/pkg/provider.go
 entry:
   repositoryBasename: entry
-  tag: "0.2.1"
+  tag: "0.2.3"
   serviceType: LoadBalancer
   servicePort: 9000
   env: []
@@ -19,7 +20,7 @@ entry:
   #     value: "01"
 hat:
   repositoryBasename: hat
-  tag: "0.2.1"
+  tag: "0.2.3"
   serviceType: ClusterIP
   servicePort: 9001
   env: []
@@ -27,7 +28,7 @@ hat:
   #     value: "01"
 leftLeg:
   repositoryBasename: left-leg
-  tag: "0.2.1"
+  tag: "0.2.3"
   serviceType: ClusterIP
   servicePort: 9002
   env: []
@@ -35,7 +36,7 @@ leftLeg:
   #     value: "01"
 leftArm:
   repositoryBasename: left-arm
-  tag: "0.2.1"
+  tag: "0.2.3"
   serviceType: ClusterIP
   servicePort: 9003
   env: []
@@ -43,7 +44,7 @@ leftArm:
   #     value: "01"
 rightLeg:
   repositoryBasename: right-leg
-  tag: "0.2.1"
+  tag: "0.2.3"
   serviceType: ClusterIP
   servicePort: 9004
   env: []
@@ -51,7 +52,7 @@ rightLeg:
   #     value: "01"
 rightArm:
   repositoryBasename: right-arm
-  tag: "0.2.1"
+  tag: "0.2.3"
   serviceType: ClusterIP
   servicePort: 9005
   env: []
