--- a/delivery/chart/templates/deployment-entry.yaml
+++ b/delivery/chart/templates/deployment-entry.yaml
@@ -1,7 +1,7 @@
 {{ $componentName := "entry" }}
 {{ $repoBasename := .Values.entry.repositoryBasename }}
 {{ $repoTag := .Values.entry.tag }}
-{{ $extraEnvs := .Values.entry.extraEnvs }}
+{{ $env := .Values.entry.env }}
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -71,6 +71,6 @@ spec:
               valueFrom:
                 fieldRef:
                   fieldPath: metadata.name
-          {{- if $extraEnvs }}
-            {{- toYaml $extraEnvs | nindent 12 }}
+          {{- if $env }}
+            {{- toYaml $env | nindent 12 }}
           {{- end }}
