--- a/delivery/chart/templates/deployment-right-arm.yaml
+++ b/delivery/chart/templates/deployment-right-arm.yaml
@@ -1,6 +1,7 @@
 {{ $componentName := "right-arm" }}
 {{ $repoBasename := .Values.rightArm.repositoryBasename }}
 {{ $repoTag := .Values.rightArm.tag }}
+{{ $env := .Values.rightArm.env }}
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -65,3 +66,11 @@ spec:
           #     port: http
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
+          env:
+            - name: POD_NAME
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.name
+          {{- if $env }}
+            {{- toYaml $env | nindent 12 }}
+          {{- end }}
