updating deploy kustomization section to allow for env to be set to change parts, also enabled basic tcp probes for services without one defined
Signed-off-by: MxNxPx <mxnxpx@gmail.com>

--- a/delivery/kustomize/base/deployment-entry.yaml
+++ b/delivery/kustomize/base/deployment-entry.yaml
@@ -39,3 +39,8 @@ spec:
               path: /
               port: http
           resources: {}
+          env:
+          - name: POD_NAME
+            valueFrom:
+              fieldRef:
+                fieldPath: metadata.name
