monolith->server, update tests

--- a/.env
+++ b/.env
@@ -2,4 +2,5 @@
 export GITHUB_USER=${GITHUB_USER}
 export GITHUB_TOKEN=${GITHUB_TOKEN}
 export GITHUB_REPO=${GITHUB_REPO}
+export IMAGE_REPO=${IMAGE_REPO}
 export COSIGN_PASSWORD=${COSIGN_PASSWORD}
