--- a/.github/workflows/microservices-release.yaml
+++ b/.github/workflows/microservices-release.yaml
@@ -43,7 +43,7 @@ jobs:
           COSIGN_PASSWORD: ${{ secrets.COSIGN_PASSWORD }}
           # for access to ghcr.io/podtato-head instead of ghcr.io/podtato-head/podtato-head
           GITHUB_TOKEN: ${{ secrets.CR_PAT }}  
-        run: make push-images 
+        run: make push-microservices-images 
 
   test_services:
     if: github.repository_owner == 'podtato-head'
@@ -56,7 +56,7 @@ jobs:
         env:
           # for access to ghcr.io/podtato-head instead of ghcr.io/podtato-head/podtato-head
           GITHUB_TOKEN: ${{ secrets.CR_PAT }}  
-        run: make test-services
+        run: make test-microservices
 
   finalize:
     if: github.repository_owner == 'podtato-head' && github.ref_name == 'main'
