--- a/.github/workflows/microservices-delivery-tests.yaml
+++ b/.github/workflows/microservices-delivery-tests.yaml
@@ -26,7 +26,7 @@ jobs:
         with:
           fetch-depth: 0
       - name: Push images
-        run: make push-images 
+        run: make push-microservices-images 
 
   test_kubectl_delivery:
     name: Deliver with kubectl
