--- a/podtato-head-server/docker/DockerfileV0.1.0
+++ b/podtato-head-server/docker/DockerfileV0.1.0
@@ -1,4 +1,6 @@
 FROM library/golang:latest AS builder
+ARG GITHUB_USER=podtato-head
+LABEL org.opencontainers.image.source = "https://github.com/${GITHUB_USER}/podtato-head"
 
 # Set necessary environment variables needed for our image
 ENV GO111MODULE=on \
