--- a/.github/workflows/microservices-delivery-tests.yaml
+++ b/.github/workflows/microservices-delivery-tests.yaml
@@ -12,6 +12,7 @@ env:
   CONTAINER_REGISTRY: ghcr.io
   GITHUB_TOKEN: ${{ github.token }}  
   GITHUB_USER: ${{ github.repository_owner }}
+  IMAGE_VERSION: test-deliveries
   
 defaults:
   run:
@@ -19,7 +20,7 @@ defaults:
 
 jobs:
   build_and_push_images:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -61,7 +62,7 @@ jobs:
         uses: actions/checkout@v2
       - name: Create kind cluster
         uses: helm/kind-action@v1.2.0
-      - name: Test delivery with helm
+      - name: Test delivery with kustomize
         run: ./delivery/kustomize/test.sh "${{ github.repository_owner }}" "${{ github.token }}"
 
   test_ketch_delivery:
@@ -71,12 +72,6 @@ jobs:
     steps:
       - name: Checkout repo
         uses: actions/checkout@v2
-      - name: Login to GitHub Container Registry
-        uses: docker/login-action@v1
-        with:
-          registry: ${{ env.CONTAINER_REGISTRY }}
-          username: ${{ github.repository_owner }}
-          password: ${{ github.token }}
       - name: Create kind cluster
         uses: helm/kind-action@v1.2.0
       - name: Test delivery with ketch
@@ -89,12 +84,6 @@ jobs:
     steps:
       - name: Checkout repo
         uses: actions/checkout@v2
-      - name: Login to GitHub Container Registry
-        uses: docker/login-action@v1
-        with:
-          registry: ${{ env.CONTAINER_REGISTRY }}
-          username: ${{ github.repository_owner }}
-          password: ${{ github.token }}
       - name: Create kind cluster
         uses: helm/kind-action@v1.2.0
       - name: Test delivery with flux
