--- a/delivery/kustomize/base/kustomization.yaml
+++ b/delivery/kustomize/base/kustomization.yaml
@@ -2,33 +2,21 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-  - deployment-hat.yaml
-  - deployment-left-arm.yaml
-  - deployment-left-leg.yaml
-  - deployment-entry.yaml
-  - deployment-right-arm.yaml
-  - deployment-right-leg.yaml
-  - service-hat.yaml
-  - service-left-arm.yaml
-  - service-left-leg.yaml
-  - service-entry.yaml
-  - service-right-arm.yaml
-  - service-right-leg.yaml
-  - serviceaccount.yaml
+- configmap-discovery.yaml
+- deployment-hat.yaml
+- deployment-left-arm.yaml
+- deployment-left-leg.yaml
+- deployment-entry.yaml
+- deployment-right-arm.yaml
+- deployment-right-leg.yaml
+- service-hat.yaml
+- service-left-arm.yaml
+- service-left-leg.yaml
+- service-entry.yaml
+- service-right-arm.yaml
+- service-right-leg.yaml
+- serviceaccount.yaml
 
 commonLabels:
-  'app.kubernetes.io/name': 'podtato-head'
+  app.kubernetes.io/name: podtato-head
 
-# images:
-#   - name: ghcr.io/podtato-head/entry
-#     newName: ghcr.io/${{ github.repository_owner }}/podtato-head/entry
-#   - name: ghcr.io/podtato-head/hat
-#     newName: ghcr.io/${{ github.repository_owner }}/podtato-head/hat
-#   - name: ghcr.io/podtato-head/right-leg
-#     newName: ghcr.io/${{ github.repository_owner }}/podtato-head/right-leg
-#   - name: ghcr.io/podtato-head/right-arm
-#     newName: ghcr.io/${{ github.repository_owner }}/podtato-head/right-arm
-#   - name: ghcr.io/podtato-head/left-leg
-#     newName: ghcr.io/${{ github.repository_owner }}/podtato-head/left-leg
-#   - name: ghcr.io/podtato-head/left-arm
-#     newName: ghcr.io/${{ github.repository_owner }}/podtato-head/left-arm
