add demo of dynamic service discovery

--- a/.github/workflows/podtato-head-tests.yaml
+++ b/.github/workflows/podtato-head-tests.yaml
@@ -3,10 +3,10 @@ name: podtato-head-go-tests
 on:
   push:
     paths:
-      - 'podtato-head/**'
+      - 'podtato-head-microservices/**'
   pull_request:
     paths:
-      - 'podtato-head/**'
+      - 'podtato-head-microservices/**'
   workflow_call:
 
 permissions:
