--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
-# supply your own values to the right of the `=`
 export GITHUB_USER=${GITHUB_USER}
 export GITHUB_TOKEN=${GITHUB_TOKEN}
 export GITHUB_REPO=${GITHUB_REPO}
 export IMAGE_REPO=${IMAGE_REPO}
+export IMAGE_VERSION=${IMAGE_VERSION:-test}
 export COSIGN_PASSWORD=${COSIGN_PASSWORD}
+
