add sessions and OIDC logon

--- a/.env
+++ b/.env
@@ -4,3 +4,11 @@ export GITHUB_REPO=${GITHUB_REPO}
 export IMAGE_REPO=${IMAGE_REPO}
 export IMAGE_VERSION=${IMAGE_VERSION:-test}
 export COSIGN_PASSWORD=${COSIGN_PASSWORD}
+
+export OIDC_ISSUER=${OIDC_ISSUER}
+export OIDC_CLIENT_ID=${OIDC_CLIENT_ID}
+export OIDC_CLIENT_SECRET=${OIDC_CLIENT_SECRET}
+export OIDC_REDIRECT_URI=${OIDC_REDIRECT_URI}
+export OIDC_CLIENT_SCOPES='openid email profile'
+export SESSION_KEY=${SESSION_KEY}
+
