update tests and README

--- a/.env
+++ b/.env
@@ -10,5 +10,7 @@ export OIDC_CLIENT_ID=${OIDC_CLIENT_ID}
 export OIDC_CLIENT_SECRET=${OIDC_CLIENT_SECRET}
 export OIDC_REDIRECT_URI=${OIDC_REDIRECT_URI}
 export OIDC_CLIENT_SCOPES='openid email profile'
+
+# if blank then generated in-process and thus not valid in a multi-instance cluster
 export SESSION_KEY=${SESSION_KEY}
 
