--- a/podtato-head-microservices/cmd/entry/Dockerfile
+++ b/podtato-head-microservices/cmd/entry/Dockerfile
@@ -1,7 +1,7 @@
+ARG BASE_RUN_IMAGE=scratch
 FROM docker.io/library/golang:latest AS builder
 ARG GITHUB_USER=podtato-head
-ARG BASE_RUN_IMAGE=scratch
-LABEL org.opencontainers.image.source = "https://github.com/${GITHUB_USER}/podtato-head"
+LABEL org.opencontainers.image.source "https://github.com/${GITHUB_USER}/podtato-head"
 
 ENV GO111MODULE=on \
     CGO_ENABLED=0
@@ -19,7 +19,7 @@ RUN go build -o entry ./cmd/entry
 ARG BASE_RUN_IMAGE
 FROM ${BASE_RUN_IMAGE}
 ARG GITHUB_USER=podtato-head
-LABEL org.opencontainers.image.source = "https://github.com/${GITHUB_USER}/podtato-head"
+LABEL org.opencontainers.image.source "https://github.com/${GITHUB_USER}/podtato-head"
 
 COPY --from=builder /build/entry /entry
 
