--- a/podtato-head-microservices/cmd/parts/Dockerfile
+++ b/podtato-head-microservices/cmd/parts/Dockerfile
@@ -1,7 +1,7 @@
+ARG BASE_RUN_IMAGE=scratch
 FROM docker.io/library/golang:latest AS builder
 ARG GITHUB_USER=podtato-head
-ARG BASE_RUN_IMAGE=scratch
-LABEL org.opencontainers.image.source = "https://github.com/${GITHUB_USER}/podtato-head"
+LABEL org.opencontainers.image.source "https://github.com/${GITHUB_USER}/podtato-head"
 
 ARG PART
 ENV PART=${PART}
@@ -23,7 +23,7 @@ EXPOSE 9000
 ARG BASE_RUN_IMAGE
 FROM ${BASE_RUN_IMAGE}
 ARG GITHUB_USER=podtato-head
-LABEL org.opencontainers.image.source = "https://github.com/${GITHUB_USER}/podtato-head"
+LABEL org.opencontainers.image.source "https://github.com/${GITHUB_USER}/podtato-head"
 ARG PART
 ENV PART=${PART}
 COPY --from=builder /serve-${PART} /serve
