--- a/delivery/kluctl/podtato-services/hat/deployment-hat.yaml
+++ b/delivery/kluctl/podtato-services/hat/deployment-hat.yaml
@@ -6,10 +6,10 @@ metadata:
   labels:
     app.kubernetes.io/name: podtato-head
     app.kubernetes.io/component: hat
-    app.kubernetes.io/version: '0.2.7'
+    app.kubernetes.io/version: {{ podtato.version }}
     app.kubernetes.io/managed-by: kustomize
 spec:
-  replicas: 1
+  replicas: {{ replicas.hat }}
   selector:
     matchLabels:
       app.kubernetes.io/name: podtato-head
@@ -24,7 +24,7 @@ spec:
       serviceAccountName: podtato-head
       containers:
         - name: podtato-head-hat
-          image: ghcr.io/podtato-head/hat:0.2.7
+          image: ghcr.io/podtato-head/hat:{{ podtato.version }}
           imagePullPolicy: IfNotPresent
           ports:
             - name: http
