--- a/delivery/kluctl/podtato-services/hat/service-hat.yaml
+++ b/delivery/kluctl/podtato-services/hat/service-hat.yaml
@@ -6,7 +6,7 @@ metadata:
   labels:
     app.kubernetes.io/name: podtato-head
     app.kubernetes.io/component: hat
-    app.kubernetes.io/version: '0.2.7'
+    app.kubernetes.io/version: {{ podtato.version }}
     app.kubernetes.io/managed-by: kustomize
 spec:
   type: ClusterIP
