--- a/delivery/kluctl/podtato-services/left-arm/deployment-left-arm.yaml
+++ b/delivery/kluctl/podtato-services/left-arm/deployment-left-arm.yaml
@@ -6,10 +6,10 @@ metadata:
   labels:
     app.kubernetes.io/name: podtato-head
     app.kubernetes.io/component: left-arm
-    app.kubernetes.io/version: '0.2.7'
+    app.kubernetes.io/version: {{ podtato.version }}
     app.kubernetes.io/managed-by: kustomize
 spec:
-  replicas: 1
+  replicas: {{ replicas.left_arm }}
   selector:
     matchLabels:
       app.kubernetes.io/name: podtato-head
@@ -24,7 +24,7 @@ spec:
       serviceAccountName: podtato-head
       containers:
         - name: podtato-head-left-arm
-          image: ghcr.io/podtato-head/left-arm:0.2.7
+          image: ghcr.io/podtato-head/left-arm:{{ podtato.version }}
           imagePullPolicy: IfNotPresent
           ports:
             - name: http
