--- a/delivery/kluctl/podtato-services/left-leg/deployment-left-leg.yaml
+++ b/delivery/kluctl/podtato-services/left-leg/deployment-left-leg.yaml
@@ -6,10 +6,10 @@ metadata:
   labels:
     app.kubernetes.io/name: podtato-head
     app.kubernetes.io/component: left-leg
-    app.kubernetes.io/version: '0.2.7'
+    app.kubernetes.io/version: {{ podtato.version }}
     app.kubernetes.io/managed-by: kustomize
 spec:
-  replicas: 1
+  replicas: {{ replicas.left_leg }}
   selector:
     matchLabels:
       app.kubernetes.io/name: podtato-head
@@ -24,7 +24,7 @@ spec:
       serviceAccountName: podtato-head
       containers:
         - name: podtato-head-left-leg
-          image: ghcr.io/podtato-head/left-leg:0.2.7
+          image: ghcr.io/podtato-head/left-leg:{{ podtato.version }}
           imagePullPolicy: IfNotPresent
           ports:
             - name: http
