--- a/delivery/kluctl/podtato-services/template-leg/deployment-template-leg.yaml
+++ b/delivery/kluctl/podtato-services/template-leg/deployment-template-leg.yaml
@@ -2,29 +2,29 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: podtato-head-left-leg
+  name: podtato-head-{{ leg.type }}-leg
   labels:
     app.kubernetes.io/name: podtato-head
-    app.kubernetes.io/component: left-leg
+    app.kubernetes.io/component: {{ leg.type }}-leg
     app.kubernetes.io/version: {{ podtato.version }}
     app.kubernetes.io/managed-by: kustomize
 spec:
-  replicas: {{ replicas.left_leg }}
+  replicas: {{ replicas.get("%s_leg" % leg.type) }}
   selector:
     matchLabels:
       app.kubernetes.io/name: podtato-head
-      app.kubernetes.io/component: left-leg
+      app.kubernetes.io/component: {{ leg.type }}-leg
   template:
     metadata:
       labels:
         app.kubernetes.io/name: podtato-head
-        app.kubernetes.io/component: left-leg
+        app.kubernetes.io/component: {{ leg.type }}-leg
     spec:
       terminationGracePeriodSeconds: 5
       serviceAccountName: podtato-head
       containers:
-        - name: podtato-head-left-leg
-          image: ghcr.io/podtato-head/left-leg:{{ podtato.version }}
+        - name: podtato-head-{{ leg.type }}-leg
+          image: ghcr.io/podtato-head/{{ leg.type }}-leg:{{ podtato.version }}
           imagePullPolicy: IfNotPresent
           ports:
             - name: http
