--- a/delivery/kluctl/deployment.yaml
+++ b/delivery/kluctl/deployment.yaml
@@ -4,8 +4,20 @@ vars:
   - file: config/{{ args.env_type }}.yaml
 
 deployments:
+  - path: registry-secrets
   - include: podtato-services
+
+# Sets the given namespace for all kustomizations that don't explicitly set it
+overrideNamespace: {{ target.name }}-podtato-kluctl
 
 commonLabels:
   podtato-head.kluctl.io/target: {{ target.name }}
   podtato-head.kluctl.io/env-type: {{ args.env_type }}
+
+args:
+  - name: github_user
+    default: "podtato-head"
+  - name: github_token
+    default: ""
+  - name: image_version
+    default: ""
