--- a/delivery/kluctl/podtato-services/misc/serviceaccount.yaml
+++ b/delivery/kluctl/podtato-services/misc/serviceaccount.yaml
@@ -5,7 +5,9 @@ metadata:
   labels:
     app.kubernetes.io/name: podtato-head
     app.kubernetes.io/component: serviceaccount
+{% if args.github_token != "" %}
     app.kubernetes.io/version: {{ podtato.version }}
     app.kubernetes.io/managed-by: kustomize
 imagePullSecrets:
   - name: ghcr
+{% endif %}
