--- a/.github/workflows/microservices-delivery-tests.yaml
+++ b/.github/workflows/microservices-delivery-tests.yaml
@@ -23,7 +23,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         with:
           fetch-depth: 0
       - name: Push images
@@ -35,11 +35,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repo
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         with:
           fetch-depth: 0
       - name: Create kind cluster
-        uses: helm/kind-action@v1.2.0
+        uses: helm/kind-action@v1.4.0
       - name: Test delivery with kubectl
         run: ./delivery/kubectl/test.sh "${{ github.repository_owner }}" "${{ github.token }}"
 
@@ -49,11 +49,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repo
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         with:
           fetch-depth: 0
       - name: Create kind cluster
-        uses: helm/kind-action@v1.2.0
+        uses: helm/kind-action@v1.4.0
       - name: Test delivery with helm
         run: ./delivery/chart/test.sh "${{ github.repository_owner }}" "${{ github.token }}"
 
@@ -63,33 +63,33 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repo
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         with:
           fetch-depth: 0
       - name: Create kind cluster
-        uses: helm/kind-action@v1.2.0
+        uses: helm/kind-action@v1.4.0
       - name: Test delivery with kustomize
         run: ./delivery/kustomize/test.sh "${{ github.repository_owner }}" "${{ github.token }}"
 
-  test_ketch_delivery:
-    name: Deliver with ketch
-    needs: [build_and_push_images]
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repo
-        uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
-      - name: Login to GitHub Container Registry
-        uses: docker/login-action@v1
-        with:
-          registry: ${{ env.CONTAINER_REGISTRY }}
-          username: ${{ github.repository_owner }}
-          password: ${{ github.token }}
-      - name: Create kind cluster
-        uses: helm/kind-action@v1.2.0
-      - name: Test delivery with ketch
-        run: ./delivery/ketch/test.sh "${{ github.repository_owner }}" "${{ github.token }}"
+  # test_ketch_delivery:
+  #   name: Deliver with ketch
+  #   needs: [build_and_push_images]
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Checkout repo
+  #       uses: actions/checkout@v3
+  #       with:
+  #         fetch-depth: 0
+  #     - name: Login to GitHub Container Registry
+  #       uses: docker/login-action@v2
+  #       with:
+  #         registry: ${{ env.CONTAINER_REGISTRY }}
+  #         username: ${{ github.repository_owner }}
+  #         password: ${{ github.token }}
+  #     - name: Create kind cluster
+  #       uses: helm/kind-action@v1.4.0
+  #     - name: Test delivery with ketch
+  #       run: ./delivery/ketch/test.sh "${{ github.repository_owner }}" "${{ github.token }}"
 
   test_flux_delivery:
     name: Deliver with flux
@@ -97,11 +97,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repo
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         with:
           fetch-depth: 0
       - name: Create kind cluster
-        uses: helm/kind-action@v1.2.0
+        uses: helm/kind-action@v1.4.0
       - name: Test delivery with flux
         run: ./delivery/flux/test.sh "${{ github.repository_owner }}" "${{ github.token }}"
 
@@ -111,10 +111,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repo
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         with:
           fetch-depth: 0
       - name: Create kind cluster
-        uses: helm/kind-action@v1.2.0
+        uses: helm/kind-action@v1.4.0
       - name: Test delivery with operator
         run: ./delivery/operator/test.sh "${{ github.repository_owner }}" "${{ github.token }}"
