--- a/.github/workflows/podtato-head-tests.yaml
+++ b/.github/workflows/podtato-head-tests.yaml
@@ -27,10 +27,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
-      - uses: actions/setup-go@v2
+        uses: actions/checkout@v3
+      - uses: actions/setup-go@v4
         with:
-          go-version: '1.17'
+          go-version: 'stable'
       - name: Verify Go code
         run: make podtato-head-verify
 
@@ -39,7 +39,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
       - name: Build and push images
         run: make push-microservices-images 
 
@@ -48,6 +48,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
       - name: Test services
         run: make test-microservices
